# stage-0

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.crdt  LICENSE  Makefile  README.md  all_ids.txt  blast_ids.py  check_health.py  ids10.txt  ids100.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  cypress.yml
compose/: full.yml  spine-only.yml
db/: 01-schema.sql  02-plans.sql
e2e/: cypress.config.js  package-lock.json  package.json
e2e/cypress/e2e/: health.cy.js
scripts/: generate_seed.py  init_local_pg.sh  qa_smoke_test.sh  seed_then_start.sh
services/: crdt_healthcheck.py  crdt_server.py  notion_ot.proto  notion_ot_pb2.py  notion_ot_pb2_grpc.py  ot_client.py
services/asset-proxy/: Dockerfile  nginx.conf  presign.py  thumb.py
services/asset-proxy/lua/: upload.lua
services/auth/: identity.schema.json  kratos.yml
services/metrics/: prometheus.yml
src/app/: cache.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  ws.py
src/app/metrics/: dashboard.json
src/app/routers/: billing.py  blocks.py  search.py  ws.py
src/search_worker/: celery.py  worker.py
tests/: conftest.py  locustfile.py  run_upload.lua  test_api_blocks.py  test_api_ops.py  test_asset_proxy_upload.py  test_cache.py  test_crud.py  test_database.py  test_health.py  test_models.py  test_ot_client.py
tools/: live_smoke.py  test_bench.py  warm_up_cache.py
