[tool.poetry]
name        = "stage-0"
version     = "0.1.0"
description = "Notion Stage-0 data-spine prototype"
authors     = ["Shrey Patel <patel.shrey4@northeastern.edu>"]

packages = [ { include = "app", from = "src" } ]

# ─────────────────────────── main runtime deps ────────────────────────────
[tool.poetry.dependencies]
python                    = ">=3.12,<4.0"
fastapi                   = "^0.115"
uvicorn                   = { extras = ["standard"], version = "^0.30" }

asyncpg                   = "^0.29"
sqlalchemy                = { extras = ["asyncio"], version = "^2.0.40" }
alembic                   = "^1.10"

pydantic                  = "^2.9"
redis                     = "^6.0"
httpx                     = "^0.28"
aiokafka                 = "^0.10"

grpcio                    = "^1.64"
grpcio-health-checking    = "^1.64"

fire                      = "^0.7.0"
psycopg2-binary           = "^2.9"
tqdm                      = "^4.67"
meilisearch = "^0.36.0"
celery = "^5.5.3"

# ─────────────────────────── dev / test deps ─────────────────────────────
[tool.poetry.group.dev.dependencies]
pytest          = ">=8.2,<9"
pytest-asyncio   = "^0.26"
pytest-cov       = "^4.0"
black            = "^24.3"
isort            = "^5.13"
mypy             = "^1.8"
pre-commit       = "^3.4"
pyyaml           = "^6.0"
ruff             = "^0.4"

# ─────────────────────────── build-time only (compiler) ───────────────────
[tool.poetry.group.build.dependencies]
grpcio-tools     = "^1.64"          # protoc Python plugin

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
